# cs_study_plan

./: .gitignore  .gitmodules  README.md  go.mod  go.work  go.work.sum  pyproject.toml
.github/workflows/: dagger.yaml
c++/: README.md
c++/chapter01/: 1_10.cc  1_11.cc  1_11.cpp  1_18.cc  1_20.cc  1_3.cc  1_3.cpp  1_4.cc  1_9.cc
c++/class-design/: main.cc
c++/memory/: main.cc
c++/multiple/: Makefile  main.cc
c++/practice/: Makefile  main.cc  oop.h  validate.h
c/proj01/: proj1.c
c/proj03/: Makefile  display.c  display.h  event.c  event.h  scheduler.c  scheduler.h
c/step01/: myhello.c
c/step02/: rlc  rlc.c
c/step03/: tax.c
c/step04/: sine.c
c/step05/: moon.c
c/step06/: cards.c
c/step07/: quadratic.c
c/step08/: words.c
c/step09/: reverser.c
c/step11/: wumpus1.c  wumpus2.c
c/step12/: Makefile  autosolve.c  autosolve.h  display.c  hanoi.c  hanoi.h
c/step13/: Makefile  transistors.c  transistors.h
compilers/: README.md
design-patterns/: Iterator.go  README.md  adapter.go  adapter_test.go  bridge.go  bridge_test.go  chain.go  chain_test.go  command.go  command_test.go  composite.go  composite_test.go  decorator.go  decorator_test.go  facade.go  facade_test.go  factory.go  factory_test.go  flyweight.go  flyweight_test.go  go.mod  go.sum  iterator_test.go  mediator.go  mediator_test.go  proxy.go  proxy_test.go
frontend/: README.md  index.html  modern-javascript.js
golang/: go.mod
kernel/: README.md  Vagrantfile
network/: README.md
python/: README.md  pyproject.toml
standard-library/: README.md
typing/: README.md
vim/: vimrc
(+347 files in other folders)
