[tool.poetry]
name = "cs_study_play"
version = "0.1.0"
description = ""
authors = ["cndoit18 <cndoit18@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^2.15.9"
dagger-io = "^0.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
dagger-io = "^0.3.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
