[tool.poetry]
name = "practice-python"
version = "0.1.0"
description = ""
authors = ["cndoit18 <cndoit18@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
